force-app/main/default/objects/AV_LeadOpportunity__c/AV_LeadOpportunity__c.object-meta.xml
<CustomObject>
    <label>Lead Opportunity</label>
    <nameField>
        <displayFormat>LO-{00000000}</displayFormat>
        <label>Lead Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Opportunity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>