force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_Amount1__c.field-meta.xml
<CustomField>
    <fullName>AV_Amount1__c</fullName>
    <description>Campo que almacena los ingresos anuales de los titulares</description>
    <label>Ingresos anuales titular</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>