force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_Amount1_AN__c.field-meta.xml
<CustomField>
    <fullName>AV_Amount1_AN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ingresos anuales titular AN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>