force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_Amount2__c.field-meta.xml
<CustomField>
    <fullName>AV_Amount2__c</fullName>
    <label>Ingresos anuales titular 2</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>