force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_AnnualIncome1__c.field-meta.xml
<CustomField>
    <fullName>AV_AnnualIncome1__c</fullName>
    <description>Campo que muestra los ingresos anuales de los titulares</description>
    <formula>IF( 
  AV_Amount1__c &gt;= 1000000, 
  TEXT(FLOOR(AV_Amount1__c / 1000000)) &amp; &quot;.&quot;, 
  &quot;&quot;) &amp; 
IF( 
  AV_Amount1__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(AV_Amount1__c / 1000)), 3) &amp; &quot;.&quot;, 
  &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(AV_Amount1__c)), 3) &amp; &quot; &quot; &amp; AV_CCY1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ingresos anuales titular</label>
    <type>Text</type>
</CustomField>