force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_AnnualIncome2__c.field-meta.xml
<CustomField>
    <fullName>AV_AnnualIncome2__c</fullName>
    <description>ingresos anuales del titular 2</description>
    <formula>IF(
AV_Amount2__c&gt;= 1000000,
TEXT(FLOOR(AV_Amount2__c/ 1000000)) &amp; &quot;.&quot;,
&quot;&quot;) &amp;
IF(
AV_Amount2__c&gt;= 1000,
RIGHT(TEXT(FLOOR(AV_Amount2__c/ 1000)), 3) &amp; &quot;.&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(AV_Amount2__c)), 3) &amp; &quot; &quot; &amp; AV_CCY2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ingresos anuales titular 2</label>
    <type>Text</type>
</CustomField>