force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_ApellidoDelGestor__c.field-meta.xml
<CustomField>
    <fullName>AV_ApellidoDelGestor__c</fullName>
    <formula>Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellido del gestor</label>
    <type>Text</type>
</CustomField>