force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_AutonomousCommunityCode__c.field-meta.xml
<CustomField>
    <fullName>AV_AutonomousCommunityCode__c</fullName>
    <description>Campo en el que se muetsra la comunidad autónoma del cliente</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comunidad autónoma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>