force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_BenchmarkIndex__c.field-meta.xml
<CustomField>
    <fullName>AV_BenchmarkIndex__c</fullName>
    <description>Campo en el que muestra el índice de referencia</description>
    <label>Índice referencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Euribor</label>
            </value>
            <value>
                <fullName>Otros</fullName>
                <isActive>false</isActive>
                <label>Otros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>