force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_BuyingPriceAmount_AN__c.field-meta.xml
<CustomField>
    <fullName>AV_BuyingPriceAmount_AN__c</fullName>
    <label>Precio compra del inmueble AN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>