force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_BuyingPriceAmountF__c.field-meta.xml
<CustomField>
    <fullName>AV_BuyingPriceAmountF__c</fullName>
    <description>Campo que muestra el precio de compra del inmueble F</description>
    <formula>IF(
AV_BuyingPriceAmount__c&gt;= 1000000,
TEXT(FLOOR(AV_BuyingPriceAmount__c/ 1000000)) &amp; &quot;.&quot;,
&quot;&quot;) &amp;
IF(
AV_BuyingPriceAmount__c&gt;= 1000,
RIGHT(TEXT(FLOOR(AV_BuyingPriceAmount__c/ 1000)), 3) &amp; &quot;.&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(AV_BuyingPriceAmount__c)), 3) &amp; &quot; &quot; &amp; AV_BuyingPriceCCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio compra del inmueble</label>
    <type>Text</type>
</CustomField>