force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_BuyingPriceCCY_AN__c.field-meta.xml
<CustomField>
    <fullName>AV_BuyingPriceCCY_AN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Importe de la vivienda AN</label>
    <length>3</length>
    <type>Text</type>
</CustomField>