force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_CCY1__c.field-meta.xml
<CustomField>
    <fullName>AV_CCY1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Moneda ingresos titular</label>
    <length>3</length>
    <type>Text</type>
</CustomField>