force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_Comment__c.field-meta.xml
<CustomField>
    <fullName>AV_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comentario</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>