force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_ContracType1__c.field-meta.xml
<CustomField>
    <fullName>AV_ContracType1__c</fullName>
    <description>Campo que muestra el tipo de contrato del titular</description>
    <label>Tipo de contrato titular</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Contrato de duración determinada</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Contrato indefinido</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Autónomo</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Otros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>