force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_ContracType2_AN__c.field-meta.xml
<CustomField>
    <fullName>AV_ContracType2_AN__c</fullName>
    <description>Campo que muestra el tipo de contrato del titular AN 2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de contrato titular 2 AN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>