force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_Country__c.field-meta.xml
<CustomField>
    <fullName>AV_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>País</label>
    <length>255</length>
    <type>Text</type>
</CustomField>