force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_CreationDate__c.field-meta.xml
<CustomField>
    <fullName>AV_CreationDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha inicio</label>
    <type>DateTime</type>
</CustomField>