force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_CurrentBalanceAmount1__c.field-meta.xml
<CustomField>
    <fullName>AV_CurrentBalanceAmount1__c</fullName>
    <label>Importe deuda titular</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>