force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_CurrentBalanceAmount2__c.field-meta.xml
<CustomField>
    <fullName>AV_CurrentBalanceAmount2__c</fullName>
    <description>Campo que muestra el importe de deuda del titular 2</description>
    <label>Importe deuda titular 2</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>