force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_CurrentBalanceCCY2__c.field-meta.xml
<CustomField>
    <fullName>AV_CurrentBalanceCCY2__c</fullName>
    <description>Campo que muestra la moneda de deuda actual del titular 2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Moneda deuda actual titular 2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>