force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_CustomerOfferId__c.field-meta.xml
<CustomField>
    <fullName>AV_CustomerOfferId__c</fullName>
    <description>Campo que almacena el id de la oferta del cliente</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer offer Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>