force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_CustomerProHolder2__c.field-meta.xml
<CustomField>
    <fullName>AV_CustomerProHolder2__c</fullName>
    <description>Campo que muestra la ficha del cliente titular 2</description>
    <formula>IF(ISBLANK(AV_Lead2__r.AV_numperso__c),&quot;&quot;,HYPERLINK(&quot;/&quot; &amp; AV_Lead2__r.AV_numperso__c, AV_Lead2__r.AV_numperso__r.FirstName + &quot; &quot;+ AV_Lead2__r.AV_numperso__r.LastName ,&quot;_self&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ficha cliente titular 2</label>
    <type>Text</type>
</CustomField>