force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_DebtAmount2__c.field-meta.xml
<CustomField>
    <fullName>AV_DebtAmount2__c</fullName>
    <formula>IF(
AV_CurrentBalanceAmount2__c&gt;= 1000000,
TEXT(FLOOR(AV_CurrentBalanceAmount2__c/ 1000000)) &amp; &quot;.&quot;,
&quot;&quot;) &amp;
IF(
AV_CurrentBalanceAmount2__c&gt;= 1000,
RIGHT(TEXT(FLOOR(AV_CurrentBalanceAmount2__c/ 1000)), 3) &amp; &quot;.&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(AV_CurrentBalanceAmount2__c)), 3) &amp; &quot; &quot; &amp; AV_CurrentBalanceCCY2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe deuda titular 2</label>
    <type>Text</type>
</CustomField>