force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_DebtMonthlyInstallment1_AN__c.field-meta.xml
<CustomField>
    <fullName>AV_DebtMonthlyInstallment1_AN__c</fullName>
    <description>Campo que almacena la cuota mensual de deuda del titular  1 AN</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cuota mensual deuda titular AN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>