force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_DebtMonthlyInstallment2__c.field-meta.xml
<CustomField>
    <fullName>AV_DebtMonthlyInstallment2__c</fullName>
    <formula>IF( 
  AV_InstallmentAmount2__c&gt;= 1000000, 
  TEXT(FLOOR(AV_InstallmentAmount2__c/ 1000000)) &amp; &quot;.&quot;, 
  &quot;&quot;) &amp; 
IF( 
  AV_InstallmentAmount2__c&gt;= 1000, 
  RIGHT(TEXT(FLOOR(AV_InstallmentAmount2__c/ 1000)), 3) &amp; &quot;.&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(AV_InstallmentAmount2__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
  MOD(AV_InstallmentAmount2__c, 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(AV_InstallmentAmount2__c, 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(AV_InstallmentAmount2__c, 1), 2) * 100, 99)) 
) &amp; &quot; &quot; &amp; AV_InstallmentCCY2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuota mensual deuda titular 2</label>
    <type>Text</type>
</CustomField>