force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_DISCOUNTAPR__c.field-meta.xml
<CustomField>
    <fullName>AV_DISCOUNTAPR__c</fullName>
    <label>TAE cuota fija bonif.</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>