force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_DISCOUNTMONTHLYINSTALLMENTAMOUNT__c.field-meta.xml
<CustomField>
    <fullName>AV_DISCOUNTMONTHLYINSTALLMENTAMOUNT__c</fullName>
    <label>Cuota fija bonif. mensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>