force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_DISCOUNTRATE__c.field-meta.xml
<CustomField>
    <fullName>AV_DISCOUNTRATE__c</fullName>
    <label>Tipo interés fija bonif.</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>