force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_DueDate__c.field-meta.xml
<CustomField>
    <fullName>AV_DueDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de vencimiento</label>
    <type>Date</type>
</CustomField>