force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_EmailGestor__c.field-meta.xml
<CustomField>
    <fullName>AV_EmailGestor__c</fullName>
    <description>Campo que almacena la dirección de correo del gestor</description>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección de correo del gestor</label>
    <type>Text</type>
</CustomField>