force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_Empresa__c.field-meta.xml
<CustomField>
    <fullName>AV_Empresa__c</fullName>
    <label>Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CaixaBank</fullName>
                <default>true</default>
                <label>CaixaBank</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>