force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_EstadoEnvioOfComercial__c.field-meta.xml
<CustomField>
    <fullName>AV_EstadoEnvioOfComercial__c</fullName>
    <label>Estado envío of. comercial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Sent</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Ignored</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Delivery canceled</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Sent to the service provider</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Prepared</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Received on mobile</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Taken into account by the service provider</label>
            </value>
            <value>
                <fullName>127</fullName>
                <label>Not applicable</label>
            </value>
            <value>
                <fullName>Delivery canceled</fullName>
                <isActive>false</isActive>
                <label>Delivery canceled</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <isActive>false</isActive>
                <label>Failed</label>
            </value>
            <value>
                <fullName>Ignored</fullName>
                <isActive>false</isActive>
                <label>Ignored</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Sent</fullName>
                <isActive>false</isActive>
                <label>Sent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>