force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_FIRSTNAME1__c.field-meta.xml
<CustomField>
    <fullName>AV_FIRSTNAME1__c</fullName>
    <formula>AV_Lead__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del cliente</label>
    <type>Text</type>
</CustomField>