force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_IncomeAmount__c.field-meta.xml
<CustomField>
    <fullName>AV_IncomeAmount__c</fullName>
    <description>Campo que contiene el importe de ingresos</description>
    <label>Importe ingresos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>