force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_INITIALCONTRIBUTIONAMOUNT__c.field-meta.xml
<CustomField>
    <fullName>AV_INITIALCONTRIBUTIONAMOUNT__c</fullName>
    <description>Aportación inicial, solicitado para Adobe Campaing</description>
    <label>Aportación inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>