force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_InstallmentCCY1__c.field-meta.xml
<CustomField>
    <fullName>AV_InstallmentCCY1__c</fullName>
    <description>Campo que contiene las cuotas de monedas del titular</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Moneda cuotas titular</label>
    <length>3</length>
    <type>Text</type>
</CustomField>