force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_InstallmentCCY2__c.field-meta.xml
<CustomField>
    <fullName>AV_InstallmentCCY2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Moneda cuotas titular 2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>