force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_InterestRateVariable__c.field-meta.xml
<CustomField>
    <fullName>AV_InterestRateVariable__c</fullName>
    <description>Campo que contiene la tasa de interes variable</description>
    <label>Tasa de interes variable</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>