force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_LastUpdate__c.field-meta.xml
<CustomField>
    <fullName>AV_LastUpdate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha última modificación</label>
    <type>DateTime</type>
</CustomField>