force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_Lead__c.field-meta.xml
<CustomField>
    <fullName>AV_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que contiene el titular</description>
    <label>Titular</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Opportunity (Titular 1)</relationshipLabel>
    <relationshipName>Lead_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>