force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_LeadIdentificationDoc__c.field-meta.xml
<CustomField>
    <fullName>AV_LeadIdentificationDoc__c</fullName>
    <formula>AV_Lead__r.AV_CustomerTypeAndIdF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documento identificación titular</label>
    <type>Text</type>
</CustomField>