force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_LinkTitular1__c.field-meta.xml
<CustomField>
    <fullName>AV_LinkTitular1__c</fullName>
    <description>Campo que contiene el link del titular</description>
    <formula>IF(ISBLANK(AV_Lead__c),&quot;&quot;,HYPERLINK(&quot;/&quot; &amp; AV_Lead__c, AV_Lead__r.FirstName + &quot; &quot;+ AV_Lead__r.LastName ,&quot;_self&quot;
))</formula>
    <label>Titular 01</label>
    <type>Text</type>
</CustomField>