force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_LinkTitular2__c.field-meta.xml
<CustomField>
    <fullName>AV_LinkTitular2__c</fullName>
    <formula>IF(ISBLANK(AV_Lead2__c),&quot;&quot;,HYPERLINK(&quot;/&quot; &amp; AV_Lead2__c, AV_Lead2__r.FirstName + &quot; &quot;+ AV_Lead2__r.LastName ,&quot;_self&quot;
))</formula>
    <label>Titular 02</label>
    <type>Text</type>
</CustomField>