force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_LoanAmountAmount__c.field-meta.xml
<CustomField>
    <fullName>AV_LoanAmountAmount__c</fullName>
    <label>Importe solicitado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>