force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_LoanAmountAmount_AN__c.field-meta.xml
<CustomField>
    <fullName>AV_LoanAmountAmount_AN__c</fullName>
    <description>Campo que contiene el importe solicitado AN</description>
    <label>Importe solicitado AN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>