force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_LoanAmountAmountF__c.field-meta.xml
<CustomField>
    <fullName>AV_LoanAmountAmountF__c</fullName>
    <formula>IF(
AV_LoanAmountAmount__c&gt;= 1000000,
TEXT(FLOOR(AV_LoanAmountAmount__c/ 1000000)) &amp; &quot;.&quot;,
&quot;&quot;) &amp;
IF(
AV_LoanAmountAmount__c&gt;= 1000,
RIGHT(TEXT(FLOOR(AV_LoanAmountAmount__c/ 1000)), 3) &amp; &quot;.&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(AV_LoanAmountAmount__c)), 3) &amp; &quot; &quot; &amp; AV_LoanAmountCCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe de la hipoteca</label>
    <type>Text</type>
</CustomField>