force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_LoanAmountCCY__c.field-meta.xml
<CustomField>
    <fullName>AV_LoanAmountCCY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Moneda prestamo</label>
    <length>3</length>
    <type>Text</type>
</CustomField>