force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_LoanAmountStatus__c.field-meta.xml
<CustomField>
    <fullName>AV_LoanAmountStatus__c</fullName>
    <formula>AV_LoanAmountAmountF__c + &apos; - &apos; +  CASE(Text(AV_Status__c),
&quot;01&quot;, &quot;Aceptado&quot;, 
&quot;02&quot;, &quot;Rechazado&quot;,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe - Estado</label>
    <type>Text</type>
</CustomField>