force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_LoanTern__c.field-meta.xml
<CustomField>
    <fullName>AV_LoanTern__c</fullName>
    <description>Campo que contiene el plazo de la hipoteca en meses</description>
    <label>Plazo hipoteca (en meses)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>