force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_LoanTern_AN__c.field-meta.xml
<CustomField>
    <fullName>AV_LoanTern_AN__c</fullName>
    <description>Campo que contiene el plazo de hipoteca en meses AN</description>
    <label>Plazo hipoteca (en meses) AN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>