force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_MAXMORTGAGEAMOUNTGRANTED__c.field-meta.xml
<CustomField>
    <fullName>AV_MAXMORTGAGEAMOUNTGRANTED__c</fullName>
    <label>Importe max. concesión</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>