force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_MAXMORTGAGEGRANTED__c.field-meta.xml
<CustomField>
    <fullName>AV_MAXMORTGAGEGRANTED__c</fullName>
    <description>Campo que contiene el porcentaje de concesión</description>
    <label>Porcentaje concesión</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>