force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_MonthlyInstallmentAmount__c.field-meta.xml
<CustomField>
    <fullName>AV_MonthlyInstallmentAmount__c</fullName>
    <label>Cuota mensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>