force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_MonthlyInstallmentCCY__c.field-meta.xml
<CustomField>
    <fullName>AV_MonthlyInstallmentCCY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Moneda cuota mensual</label>
    <length>3</length>
    <type>Text</type>
</CustomField>