force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_MovilCorpGestor__c.field-meta.xml
<CustomField>
    <fullName>AV_MovilCorpGestor__c</fullName>
    <formula>Owner:User.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Móvil corporativo del gestor</label>
    <type>Text</type>
</CustomField>