force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_NamePrescriberId__c.field-meta.xml
<CustomField>
    <fullName>AV_NamePrescriberId__c</fullName>
    <formula>Name + &apos; - &apos;+ TEXT(AV_PrescriberId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código identificación</label>
    <type>Text</type>
</CustomField>