force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_NIR__c.field-meta.xml
<CustomField>
    <fullName>AV_NIR__c</fullName>
    <description>Campo que contiene el TIN</description>
    <label>TIN</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>