force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_NombreDelGestor__c.field-meta.xml
<CustomField>
    <fullName>AV_NombreDelGestor__c</fullName>
    <formula>Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del gestor</label>
    <type>Text</type>
</CustomField>