force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_OperationType__c.field-meta.xml
<CustomField>
    <fullName>AV_OperationType__c</fullName>
    <description>Campo que contiene el tipo de operación</description>
    <label>Tipo operación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Compra-venta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>