force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>AV_PostalCode__c</fullName>
    <description>Campo que contiene el código postal</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Código postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>