force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_RejectReason__c.field-meta.xml
<CustomField>
    <fullName>AV_RejectReason__c</fullName>
    <label>Motivo de rechazo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Relationship between loan amount amount and buying price amount</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Relationship between mortgagor’s age and loan term</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Insufficient income level</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Reject for other reasons</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>