force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_SavingsAmountAmount_AN__c.field-meta.xml
<CustomField>
    <fullName>AV_SavingsAmountAmount_AN__c</fullName>
    <description>Campo que contiene la cantidad aportada AN</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cantidad aportada AN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>