force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_SavingsAmountCCY__c.field-meta.xml
<CustomField>
    <fullName>AV_SavingsAmountCCY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Moneda aportación inicial</label>
    <length>3</length>
    <type>Text</type>
</CustomField>