force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_SavingsAmountCCY_AN__c.field-meta.xml
<CustomField>
    <fullName>AV_SavingsAmountCCY_AN__c</fullName>
    <description>Campo que contiene la moneda de aportacion inicial AN</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Moneda aportación inicial AN</label>
    <length>3</length>
    <type>Text</type>
</CustomField>