force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_SignDate__c.field-meta.xml
<CustomField>
    <fullName>AV_SignDate__c</fullName>
    <description>Se informa cuando se informe el campo &quot;Fecha de la cita&quot; del evento.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha firma</label>
    <type>Date</type>
</CustomField>