force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_StairNumber__c.field-meta.xml
<CustomField>
    <fullName>AV_StairNumber__c</fullName>
    <description>Campo que contiene la informacion del bloque , edificio y escalera del cliente</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Bloque, Edificio, Escalera</label>
    <length>255</length>
    <type>Text</type>
</CustomField>