force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_StreetType__c.field-meta.xml
<CustomField>
    <fullName>AV_StreetType__c</fullName>
    <description>Campo que contiene el tipo de via</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de vía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>