force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_SumaAportacionAproximada__c.field-meta.xml
<CustomField>
    <fullName>AV_SumaAportacionAproximada__c</fullName>
    <formula>AV_InitialExpensesAmount__c  +  AV_INITIALCONTRIBUTIONAMOUNT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aportación total aprox.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>