force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_Type__c.field-meta.xml
<CustomField>
    <fullName>AV_Type__c</fullName>
    <label>Tipo de construcción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Nueva construcción</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Segunda mano</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>