force-app/main/default/objects/AV_LeadOpportunity__c/fields/AV_TypeLoan__c.field-meta.xml
<CustomField>
    <fullName>AV_TypeLoan__c</fullName>
    <description>Campo que contiene la modalidad del tipo de interés</description>
    <label>Modalidad tipo interés</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>Fija</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Mixta</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Variable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>